[package]
name = "graylog"
version = "0.1.0"
edition = "2021"
author = "github.com/Jaxii"
license = "Apache-2.0"
description = "A simple crate to send logs to a GrayLog server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htm/l

[dependencies]
url = { version = "2.3.1", features = ["serde"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
chrono = { version = "0.4.23", features = ["clock", "serde"] }

[lib]
name = "GrayLogger"
path = "src/lib.rs"
